--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,9 +5,16 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE-edge")
     %meta(name="viewport" content="width=device-width, initial-scale=1")
+
+    %script(type='text/javascript'
+            src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    %script(type='text/javascript'
+      src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
+
     = stylesheet_link_tag('application', media: 'all', 'data-turbolinks-track' => true)
     = javascript_include_tag('appplication', 'data-turbolinks-track' => true)
     = csrf_meta_tags
   %body
-    = yield
+    .container
+      = yield
 
