Rudimentary search now available
Search can now find Legislators by bioguide_id or bills by bill_id
without the user having to specify what they're looking for.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
           %a{:href => "/legislators"} Legislators
         %li
           %a{:href => "/results"} Results
-      %form.navbar-form.navbar-right{:role => "search"}
+      %form.navbar-form.navbar-right{:role => "search", :action => "/search"}
         .form-group
-          %input.form-control{:placeholder => "Search", :type => "text"}/
-        %button.btn.btn-default{:type => "submit"} Submit
+          %input.form-control{:placeholder => "'hr5025-113' 'Durbin'", :type => "text", :name => "search_term" }/
+        %button.btn.btn-default{:type => "submit"} Search
