Search view updated to show no results message
If there are not results for both legislators or bills a no results
message will be returned. As well as a message if no results are found
for one thing and results are found for the other.

--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,5 +1,16 @@
-%h1 Bills
-= render partial: 'shared/bills'
+%h1 Results
 
-%h1 Legislators
-= render partial: 'shared/legislators'
+- if @bills.count == 0 && @legislators.count == 0
+  %p No results found for #{params[:search_term]}. Please try another search.
+- else
+  - if @bills.count > 0
+    %h2 Bills
+    = render partial: 'shared/bills'
+  - if @bills.count == 0
+    %p No bills have been found
+
+  - if @legislators.count > 0
+    %h2 Legislators
+    = render partial: 'shared/legislators'
+  - if @legislators.count == 0
+    %p No legislators have been found
