Adding pagination to site.
Do you hate long lists? Love sifting through pages!? Well now we have
pagination! Special Thanks to Ashton Thomas for pointing me to
will_paginate and providing me with an example. Moved the contents of
bill/index and legislator/index view into partials since they're reused
in other parts of the application.

--- a/app/views/shared/_bills.html.haml
+++ b/app/views/shared/_bills.html.haml
@@ -18,3 +18,4 @@
       %p #{bill.introduced_on}
     .col-sm-3
       = link_to "#{bill.legislator.first_name} #{bill.legislator.last_name}", bill.legislator unless bill.legislator.nil?
+= will_paginate @bills
