Added front-end portion for registration
Added Registration form to application and link to reach it. This is
only the front end portion the backend has yet to be implemented.

--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -8,3 +8,8 @@
       %label.sr-only{:for => "loginPassword"} Password
       %input#loginPassword.form-control{:placeholder => "Password", :type => "password", :name => "password"}/
     %button.btn.btn-default{:type => "submit"} Login
+%br
+%br
+.pull-right
+  =link_to "Register", "registration/"
+%br
