Devise Added to Application
HI! BILLY MAYS HERE! TIRED OF HAVING TO REIMPLEMENT USER AUTHENTICATION
OVER AND OVER AGAIN IN YOUR APPS? WELL NOW YOU DON'T HAVE TO!
INTRODUCING DEVISE! IT DOES ALL THE STUFF FOR YOU LIKE SETTING UP VIEWS!
MIGRATIONS FOR YOUR USER TABLE! AND THE MODEL TO MATCH!

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,8 @@
     .container
       .row
         = render :partial => 'layouts/login'
+        %p.notice= notice
+        %p.alert= alert
       .row
         = render :partial => 'layouts/navbar'
       .row
