Login and Registration moved into navbar
Navbar now contains the link to Login and Registration.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -2,20 +2,25 @@
   .container-fluid
     / Brand and toggle get grouped for better mobile display
     .navbar-header
-      %button.navbar-toggle.collapsed{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+      %button.navbar-toggle.collapsed{"data-target" => "#congress-navbar-collapse", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand{:href => "/"} Congress
     / Collect the nav links, forms, and other content for toggling
-    #bs-example-navbar-collapse-1.collapse.navbar-collapse
+    #congress-navbar-collapse.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li{class: (current_page?(bills_path) && 'active') || (current_page?(root_path) && 'active')}
           = link_to "Bills", bills_path
         %li{class: current_page?(legislators_path) && 'active'}
           = link_to "Legislators", legislators_path
+      %ul.nav.navbar-nav.navbar-right
+        %li{class: current_page?(new_user_session_path) && 'active'}
+          = link_to "Log In", new_user_session_path
+        %li{class: current_page?(new_user_registration_path) && 'active'}
+          = link_to "Register", new_user_registration_path
       %form.navbar-form.navbar-right{:role => "search", :action => "/search"}
         .form-group
-          %input.form-control{:placeholder => "'hr5025-113' 'Durbin'", :type => "text", :name => "search_term" }/
+          %input.form-control{:placeholder => "Search Here", :type => "text", :name => "search_term" }
         %button.btn.btn-default{:type => "submit"} Search
