Cleaning up views for bills and legislators
Views have been cleaned up for bills and legislators and they now
utilize renderings via collections. Headers have also been parted out to
their own file.

--- a/app/views/shared/_bills.html.haml
+++ b/app/views/shared/_bills.html.haml
@@ -1,21 +1,7 @@
-.row
-  .col-sm-1
-    %p Bill ID
-  .col-sm-3
-    %p Short Title
-  .col-sm-2
-    %p Introduced on
-  .col-sm-2
-    %p Sponsor
+-if @bills.count > 0
+  = render partial: 'bills/header'
+  = render @bills
+-else
+  %p No bills have been found
 
-- @bills.each do |bill|
-  .row
-    .col-sm-1
-      =link_to "#{bill.bill_id}", bill
-    .col-sm-3
-      =link_to "#{bill.short_title}", bill
-    .col-sm-2
-      %p #{bill.introduced_on}
-    .col-sm-3
-      = link_to "#{bill.legislator.first_name} #{bill.legislator.last_name}", bill.legislator unless bill.legislator.nil?
 = will_paginate @bills
