--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -23,6 +23,8 @@
               %span.caret
             %ul.dropdown-menu{:role => "menu"}
               %li
+                = link_to "Profile", user_path(current_user.id)
+              %li
                 = link_to "Logout", destroy_user_session_path, :method => :delete
         -else
           %li{class: current_page?(new_user_session_path) && 'active'}
