Further fix ups on the tagging process
Was a bit sloppy so going around and cleaning up.

--- a/app/views/shared/_tag.html.haml
+++ b/app/views/shared/_tag.html.haml
@@ -1,7 +1,7 @@
 -if user_signed_in?
   -if tagged
     %button.btn.btn-success{onclick: "toggle('#{item_id}',
-      '#{current_user.id}', #{tag_id})", class: "#{item_id}"} Tagged for Updates
+      '#{current_user.id}', '#{tag_id}')", class: "#{item_id}"} Tagged for Updates
   -else
     %button.btn.btn-default{onclick: "toggle('#{item_id}',
-      '#{current_user.id}', #{tag_id})", class: "#{item_id}"} Tag for Updates
+      '#{current_user.id}', '#{tag_id}')", class: "#{item_id}"} Tag for Updates
