--- a/app/views/bills/show.html.haml
+++ b/app/views/bills/show.html.haml
@@ -3,7 +3,8 @@
 %h3 #{@bill.short_title}
 %br
 
-- if @bill.history_active = render partial: 'shared/tag', locals: { item_id: @bill.bill_id, tagged: @bill.tagged?(current_user), tag_id: @bill.tag_id(current_user) }
+- if @bill.history_active
+  = render partial: 'shared/tag', locals: { item_id: @bill.bill_id, tagged: @bill.tagged?(current_user), tag_id: @bill.tag_id(current_user) }
 
 %h4 OFFICIAL TITLE
 %p #{@bill.official_title}
